News app commit for FSE